src/test/ui/error-codes/E0605.stderr
error[E0605]: non-primitive cast: `u8` as `std::vec::Vec<u8>`
  --> $DIR/E0605.rs:3:5
   |
LL |     x as Vec<u8>;
   |     ^^^^^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error[E0605]: non-primitive cast: `*const u8` as `&u8`
  --> $DIR/E0605.rs:6:5
   |
LL |     v as &u8;
   |     ^^^^^^^^
   |
   = note: an `as` expression can only be used to convert between primitive types. Consider using the `From` trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0605`.
